--- a/assets/style/layout/_todo.scss
+++ b/assets/style/layout/_todo.scss
@@ -266,7 +266,7 @@ $gray: #9F9A91;
   right: 0;
   opacity: 0;
   transform: none;
-  background: url("/assets/images/delete.jpg") center / 16px no-repeat;
+  background: url("./assets/images/delete.jpg") center / 16px no-repeat;
   margin: 0;
   padding: 1.5rem 1rem;
   transition: all 0.1s ease-out 0s;
