--- a/assets/style/all.scss
+++ b/assets/style/all.scss
@@ -1,7 +1,4 @@
-// @import "../../node_modules/bootstrap/scss/functions";
-// @import "./helpers/variables";
-// @import "./helpers/utilities";
-// @import "../../node_modules/bootstrap/scss/bootstrap";
+@import './helpers/variables';
 
 // reset
 @import './base/reset';
