--- a/assets/style/css/all.css
+++ b/assets/style/css/all.css
@@ -458,7 +458,7 @@ a *, label *, button *, select *, textarea * {
   right: 0;
   opacity: 0;
   transform: none;
-  background: url("/assets/images/delete.jpg") center/16px no-repeat;
+  background: url("./assets/images/delete.jpg") center/16px no-repeat;
   margin: 0;
   padding: 1.5rem 1rem;
   transition: all 0.1s ease-out 0s;
