--- a/assets/style/layout/_todo.scss
+++ b/assets/style/layout/_todo.scss
@@ -262,7 +262,7 @@
   right: 0;
   opacity: 0;
   transform: none;
-  background: url("/assets/images/delete.jpg") center / 16px no-repeat;
+  background: url("/auth-todolist/assets/images/delete.jpg") center / 16px no-repeat;
   margin: 0;
   padding: 1.5rem 1rem;
   transition: all 0.1s ease-out 0s;
