fix: resolve loading sweetalert UI and background url path
- 解決驗證失敗 sweetalert 視窗被 loading 背景遮住 zindex 問題
- 解決 .delete 中 background url 在本 localhost、server path switch

--- a/assets/style/layout/_base.scss
+++ b/assets/style/layout/_base.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+:root {
+  --base-url: #{$base-url};
+}
+
 body {
   font-family: 'Noto Sans TC', sans-serif;
 	line-height: 1.5;
