--- a/assets/style/css/all.css
+++ b/assets/style/css/all.css
@@ -58,6 +58,10 @@ table {
   box-sizing: border-box;
 }
 
+:root {
+  --base-url: auth-todolist;
+}
+
 body {
   font-family: "Noto Sans TC", sans-serif;
   line-height: 1.5;
@@ -234,7 +238,7 @@ a *, label *, button *, select *, textarea * {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999;
+  z-index: 999;
   transition: opacity 0.5s ease-out;
 }
 .loading img {
@@ -458,7 +462,7 @@ a *, label *, button *, select *, textarea * {
   right: 0;
   opacity: 0;
   transform: none;
-  background: url("/auth-todolist/assets/images/delete.jpg") center/16px no-repeat;
+  background: var(--base-url) center/16px no-repeat;
   margin: 0;
   padding: 1.5rem 1rem;
   transition: all 0.1s ease-out 0s;
