--- a/assets/style/layout/_todo.scss
+++ b/assets/style/layout/_todo.scss
@@ -28,16 +28,16 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 211, 112); // 半透明的 #FFD370
+  background-color: rgba(255, 211, 112);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999; // 確保它在最上層
-  transition: opacity 0.5s ease-out; // 為淡出效果添加過渡
+  z-index: 999;
+  transition: opacity 0.5s ease-out;
 
   img {
     max-width: 240px;
-    animation: swing 2s ease-in-out infinite; // 添加晃動動畫
+    animation: swing 2s ease-in-out infinite;
   }
 }
 
@@ -61,7 +61,6 @@
   &-list {
     border-radius: 0 0 10px 10px;
     background-color: #fff;
-    // box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
     padding: .5rem 1rem 1rem;
   }
   &-list-ul {
@@ -262,7 +261,9 @@
   right: 0;
   opacity: 0;
   transform: none;
-  background: url("/auth-todolist/assets/images/delete.jpg") center / 16px no-repeat;
+  // background-image: url(var(--base-url));
+  background: var(--base-url) center / 16px no-repeat;
+  // background: url("/assets/images/delete.jpg") center / 16px no-repeat;
   margin: 0;
   padding: 1.5rem 1rem;
   transition: all 0.1s ease-out 0s;
