--- a/assets/style/layout/_base.scss
+++ b/assets/style/layout/_base.scss
@@ -12,7 +12,7 @@ body {
   font-family: 'Noto Sans TC', sans-serif;
 	line-height: 1.5;
 	font-weight: 700;
-  color: #333333;
+  color: $secondary;
 }
 ol, ul {
 	list-style: none;
@@ -26,7 +26,7 @@ label {
 a {
   display: block;
   text-decoration: none;
-  color: #333333;
+  color: $secondary;
 }
 
 img {
